[tool.poetry]
name = "rain-vision"
version = "0.1.0"
description = "AI-Powered Rain Detection System for Images"
authors = ["Ivan Shumilin <your-email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
opencv-python = "^4.8.0"
numpy = "^1.24.0"
pillow = "^10.0.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.0"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88